--- a/liste.html
+++ b/liste.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/acceuil.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/acceuil.css">
 
     <title>Maison des ligues</title>
 </head>
@@ -16,7 +16,7 @@
     <div class="profile-container">
         <a href="acceuil.html" class="header-l">Acceuil</a>
         <a href="profil.html">
-            <img src="../assets/profile/profile.png" alt="Photo de profil" class="profile-photo">
+            <img src="./assets/profile/profile.png" alt="Photo de profil" class="profile-photo">
         </a>
         <a href="index.html" class="header-d">Déconnexion</a>
     </div>
