css/html acc+liste

--- a/acceuil.html
+++ b/acceuil.html
@@ -16,7 +16,7 @@
     <div class="profile-container">
         <a href="liste.html" class="header-l">Liste</a>
         <a href="profil.html">
-            <img src="./assets/profile/profile.png" alt="Photo de profil" class="profile-photo">
+            <img src="assets/profile/profile.png" alt="Photo de profil" class="profile-photo">
         </a>
         <a href="index.html" class="header-d">Déconnexion</a>
     </div>
