--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="icon" type="image/png" href="favicon/Maison_des_ligues_transparent-.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css">
-
-    <title>Maison des ligues</title>
+    <title>Connexion</title>
 </head>
 <body>
 <header>
