--- a/liste.html
+++ b/liste.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="icon" type="image/png" href="favicon/Maison_des_ligues_transparent-.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/liste.css">
-
-
-    <title>Maison des ligues</title>
+    <title>Liste</title>
 </head>
 <body>
 <header>
@@ -30,14 +28,18 @@
         <label for="search-by">Rechercher par:</label>
         <select id="search-by">
             <option value="nom">Nom</option>
+            <option value="prenom">Prenom</option>
             <option value="localisation">Localisation</option>
             <option value="categorie">Catégorie</option>
         </select>
-        <label for="category-filter">Branche:</label>
+        <label for="category-filter">Catégorie:</label>
         <select id="category-filter">
-            <option value="technique">Technique</option>
+            <option value="toutes">Toutes</option>
+            <option value="technique">Développement</option>
             <option value="marketing">Marketing</option>
             <option value="vente">Vente</option>
+            <option value="rh">Ressources Humaines</option>
+            <option value="ihnformatique">Informatique</option>
         </select>
     </div>
     <div class="grid-container"></div>
@@ -51,6 +53,6 @@
     <p>Maison des ligues</p>
     <p>© 2025 Babski-Florian.</p>
   </footer>
-</footer>
+
 </body>
 </html>
